<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main menu text -->
    <string name="menu_advanced_search">advanced search</string>
    <string name="menu_preferences">settings</string>
    <string name="menu_library_hours">library hours</string>
    <string name="menu_barcode_scan">barcode scan</string>
    <string name="menu_switch_account">Switch account</string>
    <string name="menu_add_account">Add account</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_feedback">Send feedback</string>
    <string name="menu_donate">Donate</string>

    <!-- Header portion -->
    <string name="options_button_text">Options</string>
    <string name="search_details_title">Search Details</string>
    <string name="checkout_items_title">Items Checked Out</string>
    <string name="hold_items_title">Holds</string>
    <string name="hold_place_title">Place Hold</string>
    <string name="hold_details_title">Hold Details</string>
    <string name="title_fines">Fines</string>
    <string name="title_donate">Donate</string>
    <string name="copy_information_title">Copy Information</string>
    <string name="button_place_hold">Place hold</string>
    <string name="title_my_lists">My Lists</string>
    <string name="title_list_details">List Details</string>
    <string name="add_to_my_list_message">Add to my list</string>
    <string name="add_to_my_list_button">Add to list</string>
    <string name="adding_to_list_message">Adding item to list</string>
    <string name="show_details_message">Show details</string>
    <string name="choose_list_message">Select a list</string>

    <!-- first config activity -->

    <string name="username">Username:</string>
    <string name="hint_username">Card Number or Username</string>
    <string name="password">Password:</string>
    <string name="hint_password">Password or PIN</string>
    <string name="action_sign_in">Sign in</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>

    <!-- Search -->

    <string name="search_hint">Search words</string>
    <string name="search_button">Search</string>
    <string name="search_button_alt">search button</string>
    <string name="search_options_button_alt">search options</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="loading_dialog_text"></string>
    <string name="dialog_please_wait"></string>
    <string name="dialog_fetching_data_message">Searching catalog</string>
    <string name="dialog_load_more_message">Fetching more results</string>
    <string name="advanced_search_hint">Enter text here</string>
    <string name="advanced_search_add_filter_button">Add filter</string>
    <string name="advanced_search_filter_text">Added filters:</string>
    <string name="menu_button_advanced_search">Advanced search</string>
    <string name="menu_button_library_hours">Library hours</string>
    <string name="menu_button_application_preferences">Preferences</string>
    <string name="copy_information">Availability:</string>
    <string name="title_activity_startup">Welcome to Evergreen</string>
    <string name="title_search">Search</string>
    <string name="title_my_account">My Account</string>
    <string name="title_check_out">Items Checked Out</string>
    <string name="title_holds">Holds</string>
    <string name="renew_button">Renew</string>
    <string name="renew_dialog_message">Are you sure you want to renew this item?</string>
    <string name="toast_item_renewed">Item renewed</string>
    <string name="record_of">Item %1$d of %2$d</string>
    <string name="n_of_m_results">Showing %1$d of %2$d results</string>
    <string name="n_of_m_available">%1$d of %2$s available at %3$s</string>

    <!-- Search Details View -->
    <string name="show_copies">Copy info</string>

    <!-- Place Hold Activity View -->

    <string name="recipient">Recipient</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="physical_description">Physical Description</string>
    <string name="contact_telephone">Contact tel</string>
    <string name="enable_phone_notification"> Phone notification</string>
    <string name="contact_email_address">Contact email address </string>
    <string name="enable_email_notification">Email notification</string>
    <string name="pickup_location">Pickup location</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="suspend_hold">Suspend Hold</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_hold">Cancel Hold</string>
    <string name="back">Back</string>
    <string name="update_hold">Update Hold</string>
    <string name="cancel_hold_dialog_message">Are you sure you want to cancel this hold?</string>
    <string name="thaw_date">Activate hold on</string>
    <string name="hold_phone_hint">Contact phone number</string>
    <string name="hold_items">Items on hold: </string>
    <string name="hold_status_in_transit">In Transit from %1$s\nSince %2$s</string>

    <!-- Checkout items -->
    <string name="checkout_items">Items checked out:</string>
    <string name="checkout_overdue_items">Overdue:</string>
    <string name="due">Due %s</string>
    <string name="overdue">(overdue)</string>

    <!-- Fines Activity -->
    <string name="total_owned">Total Owned </string>
    <string name="total_paid">Total Paid</string>
    <string name="balance_owed">Balance Owed</string>

    <!-- Bookbag Activities -->
    <string name="list_delete_button">Delete List</string>
    <string name="list_details_button">Details</string>
    <string name="list_item_remove_button">Remove</string>
    <string name="create_list_button">Create List</string>
    <string name="list_name_hint">List name</string>

    <!-- Camera -->
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>

    <!-- Preference Activity -->
    <string name="preference_login_information">Login information</string>
    <string name="preference_login_informantion_summary">Username and password information</string>
    <string name="preference_username">Username</string>
    <string name="preference_username_summary">Please enter your login username</string>
    <string name="preference_password">Password</string>
    <string name="preference_password_summary">Enter your account password</string>
    <string name="preference_server_information_title">Server settings</string>
    <string name="preference_notification_preference_screen_title">Notification settings</string>
    <string name="preference_notification_preference_screen_summary">Configure notifications and reminders for checkout items</string>
    <string name="preference_enable_notifications">Enable notifications</string>
    <string name="preference_enable_notifications_summary_on">Uncheck this option to disable notifications when items are due</string>
    <string name="preference_enable_notifications_summary_off">Check this option to enable notifications when items are due</string>
    <string name="preference_notifications_days_before">Days before expiration</string>
    <string name="preference_notifications_days_before_summary">Chose how many days before the due date to start reminding</string>
    <string name="preference_notifications_title">Notification settings</string>

    <plurals name="number_of_copies">
        <item quantity="one">1 copy</item>
        <item quantity="other">%d copies</item>
    </plurals>
    <plurals name="number_of_holds">
        <item quantity="one">1 hold</item>
        <item quantity="other">%d holds</item>
    </plurals>
    <plurals name="number_of_items">
        <item quantity="one">1 item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <plurals name="number_of_days">
        <item quantity="one">1 day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <string name="action_settings">Settings</string>
    <string name="retry_label">Retry</string>
    <string name="choose_library_message">Select your Library</string>
    <string name="action_choose_library">Select</string>
    <string name="evergreen_libraries_url">https://evergreen-ils.org/directory/libraries.json</string>
    <string name="button_send_log">Share log</string>
    <string name="record_subject">Subject</string>
    <string name="record_series">Series</string>
    <string name="record_synopsis">Synopsis</string>
    <string name="record_isbn">ISBN</string>
    <string name="record_online_access">Online Access</string>
    <string name="msg_retrieving_fines">Retrieving fines</string>
    <string name="donate_gold_label_take1">Starbucks coffee - $4</string>
    <string name="donate_silver_label_take1">Dunkins coffee - $2</string>
    <string name="donate_karma_label_take1">Good karma - $1</string>
    <string name="donate_call_to_action_title">Enjoy this app?</string>
    <string name="donate_call_to_action_subtitle">Buy me some coffee to keep me awake and working on it!</string>
    <string name="donate_postscript_take1">Good karma lasts for a month. Buy me a coffee and I\'ll remember you
        forever.
    </string>
    <string name="toast_max_renewals_reached">Max renewals reached</string>
    <string name="toast_thanks">Thanks!</string>
    <string name="msg_list_empty">List is empty</string>
    <string name="msg_retrieving_list_contents">Getting list data</string>
    <string name="msg_removing_list_item">Removing item</string>
    <string name="msg_retrieving_lists">Getting lists</string>
    <string name="msg_creating_list">Creating list</string>
    <string name="msg_no_lists">No lists</string>
    <string name="msg_deleting_list">Deleting list</string>
    <string name="msg_confirm_delete_list">Are you sure you want to delete this list?</string>
    <string name="msg_retrieving_data">Retrieving data</string>
    <string name="msg_list_name_too_short">List name must be at least 2 characters long</string>
    <string name="title_busy_ellipsis">busy...</string>
    <string name="format">Format</string>
    <string name="msg_loading_holds">Loading holds</string>
    <string name="msg_renewing_item">Renewing item</string>
    <string name="forgot_password_button">Forgot Password</string>

</resources>
