<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="@dimen/bigActionButton_marginVertical"
              android:background="@drawable/background_grey_image"
              android:animateLayoutChanges="true">

    <Button
            android:layout_width="match_parent"
            android:layout_height="56dp"
            style="@style/BigActionButton"
            android:text="@string/title_search"
            android:id="@+id/main_btn_search"
            android:onClick="onButtonClick"
            android:drawableLeft="@drawable/kghostview"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="56dp"
            style="@style/BigActionButton"
            android:text="@string/title_check_out"
            android:id="@+id/account_btn_check_out"
            android:onClick="onButtonClick"
            android:drawableLeft="@drawable/items_checked_out"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="56dp"
            style="@style/BigActionButton"
            android:text="@string/title_holds"
            android:id="@+id/account_btn_holds"
            android:onClick="onButtonClick"
            android:drawableLeft="@drawable/holds"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="56dp"
            style="@style/BigActionButton"
            android:text="@string/title_fines"
            android:id="@+id/account_btn_fines"
            android:onClick="onButtonClick"
            android:drawableLeft="@drawable/fines"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="56dp"
            style="@style/BigActionButton"
            android:text="@string/title_donate"
            android:id="@+id/main_donate_button"
            android:onClick="onButtonClick"
            android:drawableLeft="@drawable/kteatime"
            android:visibility="invisible"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_marginLeft="24dp" android:id="@+id/main_stats_layout">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="app launches:"
                android:id="@+id/textView" android:gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="days installed:"
                android:id="@+id/textView2"/>
    </LinearLayout>

</LinearLayout>