<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:background="@drawable/background_grey_image"
              android:focusable="true"
              android:focusableInTouchMode="true"
        >

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:padding="5dp"
            android:layout_alignParentTop="true">

        <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:paddingRight="6dp"
                        />

                <TextView
                        android:id="@+id/hold_title"
                        style="@style/TitleSearchStyleList"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="Trashed : a graphic novel"
                        android:layout_gravity="left"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:paddingRight="6dp"
                        />

                <TextView
                        android:id="@+id/hold_author"
                        style="@style/AuthorSearchStyleList"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="Derf"
                        android:layout_gravity="left"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/format"
                        android:paddingRight="6dp"
                />
                <TextView
                        android:id="@+id/hold_format"
                        style="@style/PubSearchStyleList"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="book"
                        android:layout_gravity="left"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/physical_description"
                        android:paddingRight="6dp"/>
                <TextView
                        android:id="@+id/hold_physical_description"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="print 256 p."
                        android:layout_gravity="left"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pickup_location"
                        android:paddingRight="6dp"/>

                <Spinner
                        android:id="@+id/hold_pickup_location"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:spinnerMode="dialog"
                        android:layout_gravity="left"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expiration_date"
                        android:paddingRight="6dp"
                        />

                <EditText
                        android:id="@+id/hold_expiration_date"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:hint="@string/hold_expire_time_hint"
                        android:layout_gravity="left"/>
            </TableRow>
            <TableRow android:id="@+id/hold_suspend_hold_row">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suspend_hold"
                        android:paddingRight="6dp"
                />
                <CheckBox
                        android:id="@+id/hold_suspend_hold"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:layout_gravity="left"/>
            </TableRow>
            <TableRow android:id="@+id/hold_thaw_date_row">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thaw_date"
                        android:paddingRight="6dp"
                />
                <EditText
                        android:id="@+id/hold_thaw_date"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:hint="@string/hold_thaw_date_hint"
                        android:layout_gravity="left"/>


            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingBottom="3dip"
    >

        <Button
                android:id="@+id/cancel_hold_button"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:text="@string/cancel_hold"
                style="@style/ApplicationButton"
                android:layout_margin="5dip"
                />

        <Button
                android:id="@+id/update_hold_button"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:text="@string/update_hold"
                style="@style/ApplicationButton"
                android:layout_margin="5dip"
                />
    </LinearLayout>

</LinearLayout>