<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/record_details_simple_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
  	android:background="@drawable/background_grey_image"
     >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/record_header_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            />
        
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dip"
        android:background="@drawable/listview_background"
        >

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
            >

                <TextView
                        android:id="@+id/record_details_simple_title"
                        style="@style/textLarge"
                />

                <TextView
                        android:id="@+id/record_details_format"
                        style="@style/textSmall"
                        android:layout_marginTop="3dip"
                        />

                <TextView
                        android:id="@+id/record_details_simple_author"
                        style="@style/textSmall"
                        android:layout_marginTop="3dip"
                />

                <TextView
                        android:id="@+id/record_details_simple_publisher"
                        style="@style/textSmall"
                        android:layout_marginTop="3dip"
                />
            </LinearLayout>

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/record_details_simple_image"
                android:layout_width="140dip"
                android:layout_height="180dip"
                android:padding="5dip"
                android:layout_margin="10dip"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:paddingBottom="3dip"
            android:layout_marginLeft="5dip">
            <Button
                    android:id="@+id/simple_place_hold_button"
                    style="@style/ApplicationButton"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/button_place_hold"
            />
            <Button
                    android:id="@+id/show_copy_information_button"
                    style="@style/ApplicationButton"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/show_copies"
            />
            <Button
                    android:id="@+id/record_details_online_button"
                    style="@style/ApplicationButton"
                    android:layout_height="wrap_content"
                    android:text="@string/record_online_access"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    />
            <Button
                    android:id="@+id/add_to_bookbag_button"
                    style="@style/ApplicationButton"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/add_to_my_list_button"
            />
        </LinearLayout>

        <TextView
                android:id="@+id/record_details_brief_description"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dip"/>
        <TableLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:shrinkColumns="1">
            <TableRow >
                <TextView
                        android:text="@string/record_synopsis"
                        style="@style/textMediumNoPadding"
                        android:layout_marginLeft="10dip"/>

                <TextView
                        android:id="@+id/record_details_simple_synopsis"
                        android:layout_marginLeft="10dip"
                        android:layout_marginBottom="3dip"/>
            </TableRow>
            <TableRow >
                <TextView
                        android:text="@string/record_series"
                        style="@style/textMediumNoPadding"
                        android:layout_marginLeft="10dip"/>

                <TextView
                        android:id="@+id/record_details_simple_series"
                        android:layout_marginLeft="10dip"
                        android:layout_marginBottom="3dip"/>
            </TableRow>
            <TableRow >
                <TextView
                        android:text="@string/record_subject"
                        style="@style/textMediumNoPadding"
                        android:layout_marginLeft="10dip"/>

                <TextView
                        android:id="@+id/record_details_simple_subject"
                        android:layout_marginLeft="10dip"
                        android:layout_marginBottom="3dip"/>
            </TableRow>
            <TableRow >
                <TextView
                        android:text="@string/record_isbn"
                        style="@style/textMediumNoPadding"
                        android:layout_marginLeft="10dip"/>

                <TextView
                        android:id="@+id/record_details_simple_isbn"
                        android:layout_marginLeft="10dip"
                        android:layout_marginBottom="3dip"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>